Fix gaps between sections

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -72,7 +72,6 @@ html {
             margin: 20px 20px 20px 20px;
 
             .header {
-                margin-top: -10px;
                 margin-bottom: 10px;
                 padding-bottom: 10px;
                 font-size: 1.2em;
@@ -185,6 +184,10 @@ html {
         }
 
         #bookmarks-bar {
+
+            .header {
+                margin-top: -10px;
+            }
 
             .items {
 
